# CFD_Lab

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  Tasks.txt  boundary_val.cpp  boundary_val.hpp  cell.cpp  cell.hpp  enums.hpp  grid.cpp  grid.hpp  helper.cpp  init.cpp  init.hpp  main.cpp  sor.cpp  utilities.cpp  utilities.hpp  uvp.cpp  uvp.hpp  visual.cpp  visual.hpp
Debugging_Data/: Natural_Convection.pgm  Plane_Shear_Flow_test.pgm
Ref_Results/WS_1/: cavity100.0.vtk  cavity100.100.vtk  cavity100.10000.vtk  cavity100.1001.vtk  cavity100.1101.vtk  cavity100.1201.vtk  cavity100.1301.vtk  cavity100.1401.vtk  cavity100.1501.vtk  cavity100.1601.vtk  cavity100.1701.vtk  cavity100.1800.vtk  cavity100.1900.vtk  cavity100.200.vtk  cavity100.2000.vtk  cavity100.2100.vtk  (+85 more)
Ref_Test_Data/: Nlog_F1  Nlog_F2  Nlog_G1  Nlog_G2  Nlog_P_Input1  Nlog_P_Input2  Nlog_P_Output1  Nlog_P_Output2  Nlog_RS1  Nlog_RS2  Nlog_T1  Nlog_T2  Nlog_T3  Nlog_T_Input1  Nlog_T_Input2  Nlog_U_Input1  Nlog_U_Input2  Nlog_U_Output1  Nlog_U_Output2  Nlog_V_Input1  Nlog_V_Input2  Nlog_V_Output1  Nlog_V_Output2  Nlog_dt1  Tlog_P_Output01  Tlog_P_Output11  Tlog_P_Output21  Tlog_P_Output31  Tlog_P_Output41  Tlog_P_Output51  Tlog_P_Output61  Tlog_P_Output71  Tlog_RS1  flog_F1  flog_F2  flog_G1  flog_G2  flog_P_Input1  flog_P_Input2  flog_P_Output1  (+52 more)
Simulation_Data/: Fluid_Trap.pgm  Karman_Vortex_Street.pgm  Plane_Shear_Flow.pgm
tests/: CMakeLists.txt  System_Test.sh  iterative-solver_test.cpp  sample_test.cpp  test_utilities.cpp  test_utilities.hpp  ws1_unit_testing.cpp  ws2_unit_testing.cpp
(+56 files in other folders)
